Fix minor alert layout issue on IE 11.

--- a/web/pgadmin/static/scss/_alert.scss
+++ b/web/pgadmin/static/scss/_alert.scss
@@ -113,6 +113,7 @@
     -webkit-user-select: text;
     -ms-user-select: text;
     user-select: text;
+    width: 100%;
   }
 
   .error-in-footer {
